--- a/specs/IoT/index.html
+++ b/specs/IoT/index.html
@@ -47,6 +47,10 @@
                 name: "Ping Shen",
                 companyURL: "http://www.alibabagroup.com/en/global/home",
                 company: "Alibaba"
+              }，{
+                name: "Yiran Liao",
+                companyURL: "http://www.alibabagroup.com/en/global/home",
+                company: "Alibaba"
               }],
            
             
